--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,9 +60,11 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="225dp"
-        android:layout_height="133dp"
+        android:layout_width="156dp"
+        android:layout_height="76dp"
         android:layout_marginTop="92dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/infoButton"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
