--- a/app/src/main/res/layout/input_activity.xml
+++ b/app/src/main/res/layout/input_activity.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".InputTaskActivity">
 
+    <Button
+        android:id="@+id/backButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:onClick="cancel"
+        android:text="Back"
+        app:layout_constraintEnd_toStartOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Switch
         android:id="@+id/doneSwitch"
         android:layout_width="wrap_content"
