--- a/app/src/main/res/layout/input_activity.xml
+++ b/app/src/main/res/layout/input_activity.xml
@@ -6,45 +6,49 @@
     android:layout_height="match_parent"
     tools:context=".InputTaskActivity">
 
-    <Button
+    <ImageButton
         android:id="@+id/backButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="@dimen/small_margin"
+        android:layout_marginTop="@dimen/small_margin"
+        android:layout_marginEnd="@dimen/small_margin"
+        android:background="@drawable/custombutton"
         android:onClick="cancel"
-        android:text="Back"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/back"
+        app:backgroundTint="@null"
+        android:contentDescription="@string/backbutton" />
 
     <Switch
         android:id="@+id/doneSwitch"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:minHeight="48dp"
-        android:text="Done"
+        android:layout_height="@dimen/input_height"
+        android:layout_marginTop="@dimen/small_margin"
+        android:layout_marginBottom="@dimen/small_margin"
+        android:text="@string/doneLabel"
         app:layout_constraintBottom_toTopOf="@+id/taskPriority"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/taskContent" />
+        app:layout_constraintTop_toBottomOf="@+id/taskContent"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <EditText
         android:id="@+id/taskTitle"
         android:layout_width="180dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="8dp"
+        android:layout_height="@dimen/input_height"
+        android:layout_marginStart="@dimen/mid_margin"
+        android:layout_marginTop="@dimen/mid_margin"
+        android:layout_marginEnd="@dimen/large_margin"
+        android:layout_marginBottom="@dimen/small_margin"
+        android:autofillHints=""
         android:ems="10"
-        android:hint="Title"
+        android:hint="@string/titleLabel"
         android:inputType="textPersonName"
-        android:minHeight="48dp"
         android:padding="3dp"
+        android:textColorHint="#757575"
         app:layout_constraintBottom_toTopOf="@+id/editDate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -53,15 +57,15 @@
 
     <EditText
         android:id="@+id/taskContent"
-        android:layout_width="300dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="@dimen/text_area_width"
+        android:layout_height="@dimen/text_area_height"
+        android:layout_marginTop="@dimen/small_margin"
+        android:layout_marginBottom="@dimen/small_margin"
         android:ems="10"
         android:gravity="start|top"
-        android:hint="Task content"
+        android:hint="@string/task_content_hint"
         android:inputType="textMultiLine"
-        android:padding="3dp"
+        android:textColorHint="#757575"
         app:layout_constraintBottom_toTopOf="@+id/doneSwitch"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -71,19 +75,18 @@
     <EditText
         android:id="@+id/editDate"
         android:layout_width="180dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="8dp"
-        android:autoText="true"
+        android:layout_height="@dimen/input_height"
+        android:layout_marginStart="@dimen/mid_margin"
+        android:layout_marginTop="@dimen/small_margin"
+        android:layout_marginEnd="@dimen/large_margin"
+        android:layout_marginBottom="@dimen/small_margin"
         android:autofillHints=""
         android:digits='"0123456789."'
         android:ems="10"
-        android:hint="Date"
+        android:hint="@string/dateHint"
         android:inputType="date"
-        android:minHeight="48dp"
-        android:padding="3dp"
+        android:minHeight="@dimen/input_height"
+        android:textColorHint="#757575"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -94,24 +97,23 @@
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="914dp"
+        android:layout_marginStart="@dimen/small_margin"
+        android:layout_marginTop="@dimen/small_margin"
+        android:layout_marginEnd="@dimen/small_margin"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_percent="0.50121653"
+        app:layout_constraintGuide_percent="0.50"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Input task"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/small_margin"
+        android:layout_marginBottom="@dimen/small_margin"
+        android:text="@string/input_task_heading"
         app:layout_constraintBottom_toTopOf="@+id/taskTitle"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="1.0"
@@ -122,9 +124,9 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Add what you task is about"
+        android:layout_marginTop="@dimen/small_margin"
+        android:layout_marginBottom="@dimen/small_margin"
+        android:text="@string/contentLabel"
         app:layout_constraintBottom_toTopOf="@+id/taskContent"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -134,54 +136,59 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="due Date"
+        android:text="@string/due_date_label"
         app:layout_constraintBottom_toBottomOf="@+id/editDate"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="@+id/editDate" />
 
-    <Button
+    <ImageButton
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/small_margin"
         android:onClick="addTask"
-        android:text="Add Task"
+        android:background="@drawable/custombutton"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/taskPriority" />
+        app:layout_constraintTop_toBottomOf="@+id/taskPriority"
+        app:srcCompat="@drawable/add"
+        app:backgroundTint="@null"
+        android:contentDescription="@string/add_task" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="51dp"
-        android:layout_height="24dp"
-        android:text="priority: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/priorityLabel"
         app:layout_constraintBottom_toBottomOf="@+id/taskPriority"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="@+id/taskPriority" />
 
     <EditText
         android:id="@+id/taskPriority"
-        android:layout_width="50dp"
+        android:layout_width="@dimen/large_margin"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/mid_margin"
+        android:layout_marginTop="@dimen/small_margin"
+        android:layout_marginEnd="@dimen/mid_margin"
+        android:layout_marginBottom="@dimen/small_margin"
         android:ems="10"
-        android:hint="1"
+        android:hint="@string/priorityHint"
         android:inputType="numberSigned"
-        android:minHeight="48dp"
+        android:minHeight="@dimen/input_height"
+        android:textColorHint="#757575"
         app:layout_constraintBottom_toTopOf="@+id/addButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/doneSwitch" />
+        app:layout_constraintTop_toBottomOf="@+id/doneSwitch"
+        android:autofillHints="1" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Title: "
+        android:text="@string/title_label"
         app:layout_constraintBottom_toBottomOf="@+id/taskTitle"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="@+id/taskTitle" />
@@ -193,23 +200,11 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.32603407" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="165dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="3dp"
-        app:layout_constraintBottom_toTopOf="@+id/taskTitle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/tasks" />
-
     <TextView
         android:id="@+id/textError"
-        android:layout_width="200dp"
-        android:layout_height="18dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="@dimen/error_width"
+        android:layout_height="@dimen/error_height"
+        android:layout_marginTop="@dimen/small_margin"
         android:gravity="center_horizontal"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
