--- a/app/src/main/res/layout/about_activity.xml
+++ b/app/src/main/res/layout/about_activity.xml
@@ -14,14 +14,14 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="@dimen/small_margin"
+        android:layout_marginTop="@dimen/small_margin"
+        android:layout_marginEnd="@dimen/small_margin"
         android:gravity="center_horizontal"
-        android:text="About "
-        android:textSize="30sp"
+        android:text="@string/aboutText"
+        android:textSize="@dimen/big_heading"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,8 +30,8 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="App name: "
-        android:textSize="16sp"
+        android:text="@string/appNameText"
+        android:textSize="@dimen/font"
         app:layout_constraintBottom_toBottomOf="@+id/textView8"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintTop_toTopOf="@+id/textView8" />
@@ -40,10 +40,10 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="@dimen/mid_margin"
         android:layout_marginTop="50dp"
-        android:text="NotesApp"
-        android:textSize="16sp"
+        android:text="@string/notesapp"
+        android:textSize="@dimen/font"
         app:layout_constraintStart_toStartOf="@+id/guideline5"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
@@ -51,8 +51,8 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Description: "
-        android:textSize="16sp"
+        android:text="@string/descriptionLabel"
+        android:textSize="@dimen/font"
         app:layout_constraintBottom_toBottomOf="@+id/textView10"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintTop_toTopOf="@+id/textView10" />
@@ -61,11 +61,11 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="@dimen/mid_margin"
+        android:layout_marginTop="@dimen/mid_margin"
         android:width="200dp"
-        android:text="NotesApp is a app for keeping track of you tasks and make you more productive"
-        android:textSize="16sp"
+        android:text="@string/descrtiptionText"
+        android:textSize="@dimen/font"
         app:layout_constraintStart_toStartOf="@+id/guideline5"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
@@ -73,8 +73,8 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Version: "
-        android:textSize="16sp"
+        android:text="@string/versionLabel"
+        android:textSize="@dimen/font"
         app:layout_constraintBottom_toBottomOf="@+id/textView12"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintTop_toTopOf="@+id/textView12" />
@@ -83,10 +83,10 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
-        android:text="V 1.2.1"
-        android:textSize="16sp"
+        android:layout_marginStart="@dimen/mid_margin"
+        android:layout_marginTop="@dimen/mid_margin"
+        android:text="@string/versionText"
+        android:textSize="@dimen/font"
         app:layout_constraintStart_toStartOf="@+id/guideline5"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
@@ -94,8 +94,8 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Author: "
-        android:textSize="16sp"
+        android:text="@string/authorLabel"
+        android:textSize="@dimen/font"
         app:layout_constraintBottom_toBottomOf="@+id/textView14"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintTop_toTopOf="@+id/textView14" />
@@ -104,21 +104,25 @@
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
-        android:text="Harden Systems"
-        android:textSize="16sp"
+        android:layout_marginStart="@dimen/mid_margin"
+        android:layout_marginTop="@dimen/mid_margin"
+        android:text="@string/AuthorText"
+        android:textSize="@dimen/font"
         app:layout_constraintStart_toStartOf="@+id/guideline5"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
-    <Button
+    <ImageButton
         android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="@dimen/large_margin"
+        android:background="@drawable/custombutton"
+        android:contentDescription="@string/buttonDescription"
         android:onClick="goBack"
-        android:text="Back"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/back"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
