--- a/app/src/main/res/layout/input_activity.xml
+++ b/app/src/main/res/layout/input_activity.xml
@@ -53,7 +53,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:fontFamily="@font/roboto"
+        />
 
     <EditText
         android:id="@+id/taskContent"
@@ -69,7 +71,8 @@
         app:layout_constraintBottom_toTopOf="@+id/doneSwitch"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        android:fontFamily="@font/roboto"/>
 
 
     <EditText
@@ -91,7 +94,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/taskTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/taskTitle"
+        android:fontFamily="@font/roboto"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
@@ -113,6 +117,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/small_margin"
         android:layout_marginBottom="@dimen/small_margin"
+        android:fontFamily="@font/roboto"
         android:text="@string/input_task_heading"
         app:layout_constraintBottom_toTopOf="@+id/taskTitle"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -130,7 +135,8 @@
         app:layout_constraintBottom_toTopOf="@+id/taskContent"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/editDate" />
+        app:layout_constraintTop_toBottomOf="@+id/editDate"
+        android:fontFamily="@font/roboto"/>
 
     <TextView
         android:id="@+id/textView4"
@@ -139,7 +145,9 @@
         android:text="@string/due_date_label"
         app:layout_constraintBottom_toBottomOf="@+id/editDate"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toTopOf="@+id/editDate" />
+        app:layout_constraintTop_toTopOf="@+id/editDate"
+        android:fontFamily="@font/roboto"
+        />
 
     <ImageButton
         android:id="@+id/addButton"
@@ -162,7 +170,8 @@
         android:text="@string/priorityLabel"
         app:layout_constraintBottom_toBottomOf="@+id/taskPriority"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toTopOf="@+id/taskPriority" />
+        app:layout_constraintTop_toTopOf="@+id/taskPriority"
+        android:fontFamily="@font/roboto"/>
 
     <EditText
         android:id="@+id/taskPriority"
@@ -191,7 +200,8 @@
         android:text="@string/title_label"
         app:layout_constraintBottom_toBottomOf="@+id/taskTitle"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toTopOf="@+id/taskTitle" />
+        app:layout_constraintTop_toTopOf="@+id/taskTitle"
+        android:fontFamily="@font/roboto"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
@@ -208,6 +218,7 @@
         android:gravity="center_horizontal"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/addButton" />
+        app:layout_constraintTop_toBottomOf="@+id/addButton"
+        android:fontFamily="@font/roboto"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
