--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,21 @@
     tools:context=".MainActivity">
 
 
+    <ImageButton
+        android:id="@+id/exitButton2"
+        android:layout_width="@dimen/button_size"
+        android:layout_height="@dimen/button_size"
+        android:layout_marginTop="@dimen/mid_margin"
+        android:layout_marginEnd="@dimen/mid_margin"
+        android:background="@drawable/custombutton"
+        android:contentDescription="@string/exitButton"
+        android:onClick="exit"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/settings"
+        tools:ignore="MissingConstraints" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
