--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,19 @@
   <color name="secondaryTextColor">#000000</color>
   <color name="black">#FF000000</color>
   <color name="white">#FFFFFFFF</color>
+  <color name="DarkPrimaryColor">#311b92</color>
+
+  <color name="DarkPrimaryLightColor">#6746c3</color>
+
+  <color name="DarkPrimaryDarkColor">#000063</color>
+
+  <color name="DarksecondandaryColor">#d50000</color>
+
+  <color name="DarksecondandaryLightColor">#ff5131</color>
+
+  <color name="DarksecondandaryDarkColor">#9b0000</color>
+
+  <color name="DarkPrimaryTextColor">#ffffff</color>
+
+  <color name="DarksecondandaryTextColor">#ffffff</color>
 </resources>
