--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
 
     <ImageButton
-        android:id="@+id/exitButton2"
+        android:id="@+id/settingsButton"
         android:layout_width="@dimen/button_size"
         android:layout_height="@dimen/button_size"
         android:layout_marginTop="@dimen/mid_margin"
